# everything-rust

./: Cargo.toml  cargo_commands.md  rust_theory.md
chapter03/: Cargo.toml
chapter03/src/: main.rs
chapter04/: Cargo.toml
chapter04/src/: main.rs
chapter05/: Cargo.toml
chapter05/src/: main.rs
chapter06/: Cargo.toml
chapter06/src/: main.rs
chapter07/: Cargo.toml
chapter07/src/: main.rs
chapter08/: Cargo.toml
chapter08/src/: main.rs
chapter09/: Cargo.toml
chapter09/src/: main.rs
chapter10/: Cargo.toml
chapter10/src/: main.rs  traits.rs
chapter11/: Cargo.toml
chapter11/src/: lib.rs
chapter11/tests/: integration_tests.rs
chapter12/: Cargo.toml
chapter12/src/: lib.rs  main.rs  poem.txt
chapter13/: Cargo.toml
chapter13/src/: main.rs
chapter14/: cargo.md
chapter15/: Cargo.toml
chapter15/src/: main.rs
chapter16/: Cargo.toml
chapter16/src/: main  main.rs
chapter17/: Cargo.toml
chapter17/src/: async_traits.rs  main.rs
chapter18/: Cargo.toml
chapter18/src/: main.rs
chapter19/: Cargo.toml  notes.md
chapter19/src/: main.rs
chapter20/: Cargo.toml
chapter20/src/: advanced_traits.rs  macros.rs  main.rs
try_out/: Cargo.toml
try_out/src/: main.rs
variables/src/: main.rs
