[package]
name = "chapter07"
version = "0.1.0"
edition = "2021"
description = "Managing Growing Projects with Package, Crates, and Modules"
# https://doc.rust-lang.org/book/ch07-00-managing-growing-projects-with-packages-crates-and-modules.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
